# Blackjack

./: CMakeLists.txt  card.cpp  card.h  croupier.cpp  croupier.h  deck.cpp  deck.h  double.h  game.cpp  game.h  hand.cpp  hand.h  hit.h  main.cpp  move.h  person.cpp  person.h  player.cpp  player.h  player_strat.h  stand.h
